@@ -1,5 +1,9 @@
 2006-06-03  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* buildscripts/output-distance.py
+	(SystemLink.output_expression_change_count): keep track of changed
+	details, and dump in details html page.
+ 
 	* input/regression/figured-bass-staff.ly: add note about setting
 	properties in Staff context.
 
